@@ -1,5 +1,5 @@
 author = direwolf420
-version = 1.1.0.9
+version = 1.2
 displayName = ItemMagnetPlus
 homepage = https://forums.terraria.org/index.php?threads/itemmagnetplus-customizable-item-magnet.74425/
 hideCode = true
